--- a/views/home.hbs
+++ b/views/home.hbs
@@ -486,7 +486,6 @@
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Platform &nbsp;</span><span
                   style="color: #bd0c0e;">Partner</span>
               </h3>
@@ -512,7 +511,6 @@
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Our &nbsp;</span><span style="color: #bd0c0e;">Sponsors</span>
               </h3>
             </div>
@@ -566,6 +564,9 @@
               <a href="https://www.elastic.co/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/elastic_logo.png" alt="">
               </a>
+              <a href="https://buythevalue.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/buy_the_value.jpeg" alt="">
+              </a>
               <a href="https://1password.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/1P.png" alt="">
               </a>
@@ -598,7 +599,6 @@
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Internship&nbsp;</span><span
                   style="color: #bd0c0e;">Partner</span>
               </h3>
@@ -623,7 +623,6 @@
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Media&nbsp;</span><span style="color: #bd0c0e;">Partner</span>
               </h3>
             </div>
@@ -643,12 +642,11 @@
       <!-- /media partners  -->
 
       <!-- Community Partners -->
-      <div id="community-partners" class="section">
+      <div id="community-partners" >
         <!-- container -->
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <div class="line"></div>
               <h3 class="title"><span style="color:#000;">Community&nbsp;</span><span
                   style="color: #bd0c0e;">Partners</span>
               </h3>
@@ -673,6 +671,30 @@
         </div>
       </div>
       <!-- /community partners  -->
+
+<!-- ecosystem Partners -->
+      <div id="ecosystem-partner" style="padding-bottom: 30px;">
+        <!-- container -->
+        <div class="container">
+          <div class="row">
+            <div class="section-subtitle">
+              <h3 class="title"><span style="color:#000;">Ecosystem&nbsp;</span><span style="color: #bd0c0e;">Partner</span>
+              </h3>
+            </div>
+            <div style="display: flex;
+                    flex-wrap: wrap;
+                    justify-content: center;
+                    align-items: center;">
+              <a href="http://ihubgujarat.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/ihub.jpg" alt="">
+              </a>
+            </div>
+            <!-- /row -->
+          </div>
+          <!-- /container -->
+        </div>
+      </div>
+      <!-- /ecosystem partners  -->
 
       <!-- SponsorChallenges -->
       <div id="sponsorChallenges" class="section">
