--- a/views/home.hbs
+++ b/views/home.hbs
@@ -582,6 +582,9 @@
               <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
+              <a href="https://atom.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/atom_logo.png" alt="" style="width: 15rem;">
+              </a>
               <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
               </a>
@@ -642,7 +645,7 @@
       <!-- /media partners  -->
 
       <!-- Community Partners -->
-      <div id="community-partners" >
+      <div id="community-partners">
         <!-- container -->
         <div class="container">
           <div class="row">
@@ -672,13 +675,14 @@
       </div>
       <!-- /community partners  -->
 
-<!-- ecosystem Partners -->
+      <!-- ecosystem Partners -->
       <div id="ecosystem-partner" style="padding-bottom: 30px;">
         <!-- container -->
         <div class="container">
           <div class="row">
             <div class="section-subtitle">
-              <h3 class="title"><span style="color:#000;">Ecosystem&nbsp;</span><span style="color: #bd0c0e;">Partner</span>
+              <h3 class="title"><span style="color:#000;">Ecosystem&nbsp;</span><span
+                  style="color: #bd0c0e;">Partner</span>
               </h3>
             </div>
             <div style="display: flex;
@@ -715,7 +719,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-sm-6 col-xs-12 flip" >
+            <div class="col-md-6 col-sm-6 col-xs-12 flip">
               <div class="front content text-center"
                 style="background: linear-gradient(to top left, #434343, #000000);">
                 <h2>EchoAR Challenge</h2>
