--- a/views/home.hbs
+++ b/views/home.hbs
@@ -554,7 +554,7 @@
               <a href="https://www.framer.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/framer.svg" alt="">
               </a>
-              <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer" >
+              <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/onli_logo.jpeg" alt="" style="width: 15rem;">
               </a>
               <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor"
@@ -577,13 +577,13 @@
                 <img src="img/coding-blocks-logo.png" alt="">
               </a>
               <a href="https://www.voiceflow.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/voiceflow_logo.png" alt="" >
+                <img src="img/voiceflow_logo.png" alt="">
               </a>
               <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
-              <a href="https://atom.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/atom_logo.png" alt="" >
+              <a href="https://www.theatom.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/theatom_logo.jpeg" alt="">
               </a>
               <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
