price money updated

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -413,7 +413,7 @@
                 <h3 class="title"><span>Prizes</span></h3>
               </div>
             </div>
-            <h2 style="text-align: center;">Worth more than 33 Lakhs!!</h2>
+            <h2 style="text-align: center;">Worth more than 37 Lakhs!!</h2>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content text-center" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
                 <h2>1st Prize</h2>
@@ -554,8 +554,8 @@
               <a href="https://www.framer.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/framer.svg" alt="">
               </a>
-              <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/onli_logo.jpeg" alt="">
+              <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer" >
+                <img src="img/onli_logo.jpeg" alt="" style="width: 15rem;">
               </a>
               <a href="https://www.hackathonsinternational.com/" target="_blank" class="sponsor"
                 rel="noopener noreferrer">
@@ -577,13 +577,13 @@
                 <img src="img/coding-blocks-logo.png" alt="">
               </a>
               <a href="https://www.voiceflow.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/voiceflow_logo.png" alt="" style="width: 15rem;">
+                <img src="img/voiceflow_logo.png" alt="" >
               </a>
               <a href="https://www.producthunt.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/profucthunt-logo.png" alt="" style="width: 15rem;">
               </a>
               <a href="https://atom.io/" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/atom_logo.png" alt="" style="width: 15rem;">
+                <img src="img/atom_logo.png" alt="" >
               </a>
               <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
