--- a/views/home.hbs
+++ b/views/home.hbs
@@ -164,6 +164,7 @@
             </div>
             <div class="registration__details">
               <button class="register" onclick="register()">Register</button>
+              <button class="discord"><a href="https://discord.gg/SHdfG7Rnmu">Join us on Discord</a></button>
             </div>
           </div>
           <div class="hero__content__banner">
