--- a/public/sass/herostyles.scss
+++ b/public/sass/herostyles.scss
@@ -41,6 +41,8 @@ $primary-text: #ddd;
     }
     .registration__details {
       margin-bottom: 30px;
+      display: flex;
+      align-items: center;
     }
     .hackathon__details {
       padding-top: 55px;
