--- a/views/home.hbs
+++ b/views/home.hbs
@@ -163,7 +163,6 @@
               <div id="timer" class="countdown"></div>
             </div>
             <div class="registration__details">
-              <button class="register" onclick="register()">Register</button>
               <button class="discord"><a target="_blank" rel="noopener noreferrer"
                   href="https://discord.com/invite/WvPdAbv5tP">Join us on Discord</a></button>
             </div>
@@ -907,7 +906,7 @@
       <!-- /FAQS -->
 
       <!-- CTA -->
-      <div id="cta" class="section">
+      {{!-- <div id="cta" class="section">
         <!-- background image -->
         <div class="section-bg" style="background-image:url(./img/background004.jpg);"
           data-stellar-background-ratio="0.5">
@@ -923,10 +922,9 @@
               <div class="cta-content text-center">
                 <h2>Registrations started</h2>
                 <p class="lead">Our focus is on letting your imagination flow free and enable you to push the
-                  boundaries of
-                  what can be done. We're open for all! We'll take care of the food and stay - virtually leaving
+                  boundaries of what can be done. We're open for all! We'll take care of the food and stay - virtually
+                  leaving
                   you no excuse to not build something that'll blow our minds.</p>
-                {{!-- <button class="" id="devfolio-apply-now2">Apply with Devfolio</button> --}}
                 <button class="register" onclick="register()">Register</button>
 
               </div>
@@ -936,7 +934,7 @@
           <!-- /row -->
         </div>
         <!-- /container -->
-      </div>
+      </div> --}}
       <!-- /CTA -->
 
       <!-- Contact -->
