regirstration route removed

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -187,12 +187,12 @@
               <div class="save_the_date zoomIn animated delay-5s">
                 Save the Date
               </div>
-              <div class="last-date-info animated bounceInUp delay-5s">
+              {{!-- <div class="last-date-info animated bounceInUp delay-5s">
                 Last date of registration is 6th Jan
                 <div>
                   hurry up folks!
                 </div>
-              </div>
+              </div> --}}
             </div>
           </div>
 
