add judges section

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -357,7 +357,6 @@
     </div>
     <!-- /Galery -->
 
-
     <div class="container tracks section">
       <br><br>
       <div class="row">
@@ -463,6 +462,71 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="section" id="judges">
+      <div class="section-title">
+        <h3 class="title"><span style="color: #0b0f28"> Our &nbsp;</span><span style="color: #bd0c0e;">
+            Judges</span>
+        </h3>
+      </div>
+      <div id="profile-owl" class="owl-carousel owl-theme">
+        <div class="profile-item">
+          <div class="container">
+            <div class="profile">
+              <div class="content">
+                <h1 class="title" style="font-size: 3.5rem"> Ankit Rastogi </h1>
+                <h5 class="content-body">
+                  Leading Accommodation Supply Product at Makemytrip Goibibo, Entrepreneurial, Leadership of People,
+                  Product, Business,P&L
+                </h5>
+              </div>
+              <div class="image-section">
+                <img class="profile_image"
+                  src="https://media-exp1.licdn.com/dms/image/C5103AQEaQr0tmLtffA/profile-displayphoto-shrink_400_400/0/1536492922123?e=1615420800&v=beta&t=U5J9o1lRHqzSwbBynhfeoFJnFHfoSSObG-WgJL9Xnmo"
+                  alt="profile-pic">
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="profile-item">
+          <div class="container">
+            <div class="profile">
+              <div class="content">
+                <h1 class="title" style="font-size: 3.5rem"> Judge Name </h1>
+                <h5 class="content-body">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe consequatur veritatis est quo,
+                  voluptatum sit ex! Mollitia illo dolorem minus.
+                </h5>
+              </div>
+              <div class="image-section">
+                <img class="profile_image" src="https://picsum.photos/400" alt="profile-pic">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="tracks container section">
+      <div class="modal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">Modal title</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
 
       <!-- Current-Sponsors -->
       <div id="sponsors" class="section">
@@ -486,22 +550,20 @@
       <div id="platform-partner">
         <!-- container -->
         <div class="container">
-          <div class="row">
-            <div class="section-subtitle">
-              <h3 class="title"><span style="color:#000;">Platform &nbsp;</span><span
-                  style="color: #bd0c0e;">Partner</span>
-              </h3>
-            </div>
-            <div style="display: flex;
+          <div class="section-subtitle">
+            <h3 class="title"><span style="color:#000;">Platform &nbsp;</span><span
+                style="color: #bd0c0e;">Partner</span>
+            </h3>
+          </div>
+          <div style="display: flex;
                                       flex-wrap: wrap;
                                       justify-content: center;
                                       align-items: center;">
-              <a href="https://bit.ly/2VKyFW1" target="_blank" class="sponsor" rel="noopener noreferrer">
-                <img src="img/airmeet_logo.svg" alt="">
-              </a>
-            </div>
-            <!-- /row -->
+            <a href="https://bit.ly/2VKyFW1" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <img src="img/airmeet_logo.svg" alt="">
+            </a>
           </div>
+          <!-- /row -->
           <!-- /container -->
         </div>
         <!-- /platform partner  -->
@@ -1049,6 +1111,7 @@
         $('.arrow-img' + i).toggleClass('rotate');
       });
     }
+
   </script>
 
 </body>
