--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -1,120 +1,157 @@
 @media (max-width: 1024px) {
-    .hero {
-        background-size: 1500px;
-        background-position: center;
-        height: 1200px;
-        &__content{
-            top: 50px;
-            .row{
-                display: block;
-            }
-            &__details{
-                .chat{
-                    backdrop-filter: unset;
-                }
-                .hackathon__details{
-                    margin-left: auto;
-                    margin-right: auto;
-                    &__title{
-                        font-size: 40px;
-                        text-align: center;
-                    }
-                }
-                .countdown__wrapper{
-                    margin-left: auto;
-                    margin-right: auto;
-                    p{
-                        text-align: center;
-                    }
-                }
-                .registration__details{
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-                .chat{
-                    margin: 30px auto;
-                    max-width: 320px;
-                }
-            }
-            &__banner{
-                margin-left: 0;
-                .banner_img{
-                    max-width: 200px;
-                }
-            }
+  .hero {
+    background-size: 1500px;
+    background-position: center;
+    height: 1200px;
+    &__content {
+      top: 50px;
+      .row {
+        display: block;
+      }
+      &__details {
+        .chat {
+          backdrop-filter: unset;
         }
-    }
-}
-
-@media (max-width: 600px){
-    .hero{
-        .hero__content{
-            margin: 0;
-            padding: 0 10px;
-            &__details{
-                min-width: 300px;
-                .registration__details{
-                    flex-direction: column;
-                    .register{
-                        margin-bottom: 15px;
-                    }
-                }
-                .countdown__wrapper{
-                    p{
-                        letter-spacing: 4px;
-                        font-size: 14px;
-                    }
-                    .countdown span{
-                        font-size: 3rem;
-                    }
-                }
-            }
-            &__banner{
-                &_slogan{
-                    div span{
-                        padding: 0 5px;
-                    }
-                    .save_the_date{
-                        font-size: 18px;
-                        letter-spacing: 12px;
-                        text-align: center;
-                    }
-                }
-            }
+        .hackathon__details {
+          margin-left: auto;
+          margin-right: auto;
+          &__title {
+            font-size: 40px;
+            text-align: center;
+          }
         }
-    }
-    #footer{
-        .wave_box span{
-            font-size: 24px;
+        .countdown__wrapper {
+          margin-left: auto;
+          margin-right: auto;
+          p {
+            text-align: center;
+          }
         }
-        .contact-social a{
-            width: 30px;
-            height: 30px;
-            line-height: 30px;
+        .registration__details {
+          margin-left: auto;
+          margin-right: auto;
         }
-    }
-    .section-bg{
-        border-radius: 0;
-    }
-    #galery-owl.owl-theme .owl-nav{
+        .chat {
+          margin: 30px auto;
+          max-width: 320px;
+        }
+      }
+      &__banner {
+        margin-left: 0;
+        .banner_img {
+          max-width: 200px;
+        }
+      }
+      #profile-owl.owl-theme .owl-nav {
         display: none;
+      }
     }
-    #become-sponsor{
-        .dotted-line{
-            display: none;
-        }
-    }
+  }
 }
 
-@media (max-width: 280px){
-    .hero__content{
-        &__details{
-            .chat{
-                width: 250px;
-            }
+@media (max-width: 600px) {
+  .hero {
+    .hero__content {
+      margin: 0;
+      padding: 0 10px;
+      &__details {
+        min-width: 300px;
+        .registration__details {
+          flex-direction: column;
+          .register {
+            margin-bottom: 15px;
+          }
         }
-        .save_the_date{
-            letter-spacing: 8px !important;
+        .countdown__wrapper {
+          p {
+            letter-spacing: 4px;
+            font-size: 14px;
+          }
+          .countdown span {
+            font-size: 3rem;
+          }
         }
+      }
+      &__banner {
+        &_slogan {
+          div span {
+            padding: 0 5px;
+          }
+          .save_the_date {
+            font-size: 18px;
+            letter-spacing: 12px;
+            text-align: center;
+          }
+        }
+      }
     }
+  }
+  #footer {
+    .wave_box span {
+      font-size: 24px;
+    }
+    .contact-social a {
+      width: 30px;
+      height: 30px;
+      line-height: 30px;
+    }
+  }
+  .section-bg {
+    border-radius: 0;
+  }
+  #galery-owl.owl-theme .owl-nav {
+    display: none;
+  }
+  #become-sponsor {
+    .dotted-line {
+      display: none;
+    }
+  }
+  #profile-owl.owl-theme .owl-nav {
+    display: none;
+  }
+  .profile {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    word-wrap: break-word;
+    .image-section {
+      margin: 0;
+      height: 100%;
+      flex: 1 1 auto;
+      align-items: right;
+    }
+    .content {
+      width: 60%;
+      display: flex;
+      padding: 20px;
+      flex-direction: column;
+      text-overflow: ellipsis;
+      &-body {
+        color: #ddd;
+      }
+    }
+    .title {
+      color: #ddd;
+    }
+    &_image {
+      height: 100%;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 280px) {
+  .hero__content {
+    &__details {
+      .chat {
+        width: 250px;
+      }
+    }
+    .save_the_date {
+      letter-spacing: 8px !important;
+    }
+  }
 }
