--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -812,6 +812,96 @@ button:not(:focus) {
 }
 
 /*=========================================================
+    Profile
+===========================================================*/
+.profile {
+  background-color: #1d1d22;
+  min-height: 50vh;
+  // max-width: 80vw;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  word-wrap: break-word;
+  .image-section {
+    margin: 0;
+    height: 100%;
+    flex: 1 1 auto;
+    align-items: right;
+  }
+  .content {
+    width: 60%;
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    text-overflow: ellipsis;
+    &-body {
+      color: #ddd;
+    }
+  }
+  .title {
+    color: #ddd;
+  }
+  &_image {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+  }
+}
+#profile-owl.owl-item .profile-item {
+  opacity: 0.5;
+  -webkit-transform: scale(0.9);
+  -ms-transform: scale(0.9);
+  transform: scale(0.9);
+  -webkit-transform-origin: 100% 100%;
+  -ms-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+  -webkit-transition: 0.6s opacity, 0.6s -webkit-transform;
+  transition: 0.6s opacity, 0.6s -webkit-transform;
+  transition: 0.6s transform, 0.6s opacity;
+  transition: 0.6s transform, 0.6s opacity, 0.6s -webkit-transform;
+}
+
+#profile-owl.owl-theme .owl-item.active + .owl-item .profile-item {
+  -webkit-transform-origin: 0% 100%;
+  -ms-transform-origin: 0% 100%;
+  transform-origin: 0% 100%;
+}
+
+#profile-owl.owl-theme .owl-item.active .profile-item {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+#profile-owl.owl-theme .owl-nav [class*='owl-'] {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  background: transparent;
+  color: #bd0c0e;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
+  font-size: 40px;
+  border-radius: 50%;
+  padding: 0;
+  margin: 0;
+}
+
+#profile-owl.owl-theme .owl-prev {
+  left: 6%;
+}
+
+#profile-owl.owl-theme .owl-next {
+  right: 6%;
+}
+
+/*=========================================================
     EVENTS
 ===========================================================*/
 
