--- a/public/sass/_mobile.scss
+++ b/public/sass/_mobile.scss
@@ -42,9 +42,6 @@
           max-width: 200px;
         }
       }
-      #profile-owl.owl-theme .owl-nav {
-        display: none;
-      }
     }
   }
 }
@@ -107,38 +104,16 @@
       display: none;
     }
   }
-  #profile-owl.owl-theme .owl-nav {
-    display: none;
-  }
   .profile {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    word-wrap: break-word;
+    flex-wrap: wrap !important;
+    overflow: visible;
+    height: auto !important;
     .image-section {
-      margin: 0;
-      height: 100%;
-      flex: 1 1 auto;
-      align-items: right;
-    }
-    .content {
-      width: 60%;
-      display: flex;
-      padding: 20px;
-      flex-direction: column;
-      text-overflow: ellipsis;
-      &-body {
-        color: #ddd;
-      }
-    }
-    .title {
-      color: #ddd;
+      width: 100%;
+      height: 400px !important;
     }
     &_image {
       height: 100%;
-      width: 100%;
     }
   }
 }
