modify judges section styling

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -469,37 +469,39 @@
             Judges</span>
         </h3>
       </div>
-      <div id="profile-owl" class="owl-carousel owl-theme">
-        <div class="profile-item">
-          <div class="container">
-            <div class="profile">
-              <div class="content">
-                <h1 class="title" style="font-size: 3.5rem"> Ankit Rastogi </h1>
-                <h5 class="content-body">
-                  Leading Accommodation Supply Product at Makemytrip Goibibo, Entrepreneurial, Leadership of People,
-                  Product, Business,P&L
-                </h5>
-              </div>
-              <div class="image-section">
-                <img class="profile_image"
-                  src="https://media-exp1.licdn.com/dms/image/C5103AQEaQr0tmLtffA/profile-displayphoto-shrink_400_400/0/1536492922123?e=1615420800&v=beta&t=U5J9o1lRHqzSwbBynhfeoFJnFHfoSSObG-WgJL9Xnmo"
-                  alt="profile-pic">
+      <div class="container">
+        <div id="profile-owl" class="owl-carousel owl-theme">
+          <div class="row">
+            <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
+              <div class="profile">
+                <div class="content">
+                  <h1 class="title" style="font-size: 3.5rem"> Ankit Rastogi </h1>
+                  <h5 class="content-body">
+                    Leading Accommodation Supply Product at Makemytrip Goibibo, Entrepreneurial, Leadership of People,
+                    Product, Business,P&L
+                  </h5>
+                </div>
+                <div class="image-section">
+                  <img class="profile_image"
+                    src="https://media-exp1.licdn.com/dms/image/C5103AQEaQr0tmLtffA/profile-displayphoto-shrink_400_400/0/1536492922123?e=1615420800&v=beta&t=U5J9o1lRHqzSwbBynhfeoFJnFHfoSSObG-WgJL9Xnmo"
+                    alt="profile-pic">
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div class="profile-item">
-          <div class="container">
-            <div class="profile">
-              <div class="content">
-                <h1 class="title" style="font-size: 3.5rem"> Judge Name </h1>
-                <h5 class="content-body">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe consequatur veritatis est quo,
-                  voluptatum sit ex! Mollitia illo dolorem minus.
-                </h5>
-              </div>
-              <div class="image-section">
-                <img class="profile_image" src="https://picsum.photos/200" alt="profile-pic">
+          <div class="row">
+            <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
+              <div class="profile">
+                <div class="content">
+                  <h1 class="title" style="font-size: 3.5rem"> Judge Name </h1>
+                  <h5 class="content-body">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe consequatur veritatis est quo,
+                    voluptatum sit ex! Mollitia illo dolorem minus.
+                  </h5>
+                </div>
+                <div class="image-section">
+                  <img class="profile_image" src="https://picsum.photos/200" alt="profile-pic">
+                </div>
               </div>
             </div>
           </div>
