--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -818,6 +818,8 @@ button:not(:focus) {
   background-color: #1d1d22;
   min-height: 50vh;
   height: 400px;
+  width: 100%;
+  margin: 0;
   // max-width: 80vw;
   display: flex;
   flex-direction: row;
@@ -877,9 +879,33 @@ button:not(:focus) {
 }
 
 #profile-owl.owl-theme .owl-nav [class*='owl-'] {
-  background-color: #333;
+  // background-color: #1d1d22;
   font-size: 40px;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  padding: 0;
+  margin: 0;
   width: 80px;
+}
+
+#profile-owl.owl-theme .owl-prev {
+  opacity: 0.5;
+  left: -10%;
+}
+
+#profile-owl.owl-theme .owl-prev:hover {
+  opacity: 1;
+}
+
+#profile-owl.owl-theme .owl-next {
+  opacity: 0.5;
+  right: -10%;
+}
+#profile-owl.owl-theme .owl-next:hover {
+  opacity: 1;
 }
 
 /*=========================================================
