add first judge

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -475,10 +475,12 @@
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
                 <div class="content">
-                  <h1 class="title" style="font-size: 3.5rem"> Ankit Rastogi </h1>
+                  <h1 class="title" style="font-size: 4.5rem"> Ankit Rastogi </h1>
                   <h5 class="content-body">
-                    Leading Accommodation Supply Product at Makemytrip Goibibo, Entrepreneurial, Leadership of People,
-                    Product, Business,P&L
+                    <p>Senior Vice President - MakeMyTrip</p>
+                    <p>
+                      Gold Medalist, BE Computer Engg. SVNIT 2003
+                    </p>
                   </h5>
                 </div>
                 <div class="image-section">
@@ -489,7 +491,7 @@
               </div>
             </div>
           </div>
-          <div class="row">
+          {{!-- <div class="row">
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
                 <div class="content">
@@ -504,7 +506,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> --}}
         </div>
       </div>
     </div>
