--- a/views/home.hbs
+++ b/views/home.hbs
@@ -475,13 +475,11 @@
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
                 <div class="content">
-                  <h1 class="title" style="font-size: 4.5rem"> Ankit Rastogi </h1>
-                  <h5 class="content-body">
-                    <p>Senior Vice President - MakeMyTrip</p>
-                    <p>
-                      Gold Medalist, BE Computer Engg. SVNIT 2003
-                    </p>
-                  </h5>
+                  <h1 class="title"> Ankit Rastogi</h1>
+                  <div class="content-body">
+                    <p>Senior Vice President of MakeMyTrip</p>
+                    <p>Gold Medalist, BE Computer Engg. SVNIT 2003</p>
+                  </div>
                 </div>
                 <div class="image-section">
                   <img class="profile_image"
