remove register button

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -163,7 +163,6 @@
               <div id="timer" class="countdown"></div>
             </div>
             <div class="registration__details">
-              <button class="register" onclick="register()">Register</button>
               <button class="discord"><a target="_blank" rel="noopener noreferrer"
                   href="https://discord.com/invite/WvPdAbv5tP">Join us on Discord</a></button>
             </div>
@@ -188,12 +187,12 @@
               <div class="save_the_date zoomIn animated delay-5s">
                 Save the Date
               </div>
-              <div class="last-date-info animated bounceInUp delay-5s">
+              {{!-- <div class="last-date-info animated bounceInUp delay-5s">
                 Last date of registration is 9th Jan
                 <div>
                   hurry up folks!
                 </div>
-              </div>
+              </div> --}}
             </div>
           </div>
 
@@ -971,7 +970,7 @@
       <!-- /FAQS -->
 
       <!-- CTA -->
-      <div id="cta" class="section">
+      {{!-- <div id="cta" class="section">
         <!-- background image -->
         <div class="section-bg" style="background-image:url(./img/background004.jpg);"
           data-stellar-background-ratio="0.5">
@@ -990,7 +989,6 @@
                   boundaries of what can be done. We're open for all! We'll take care of the food and stay - virtually
                   leaving
                   you no excuse to not build something that'll blow our minds.</p>
-                <button class="register" onclick="register()">Register</button>
 
               </div>
             </div>
@@ -999,7 +997,7 @@
           <!-- /row -->
         </div>
         <!-- /container -->
-      </div>
+      </div> --}}
       <!-- /CTA -->
 
       <!-- Contact -->
