--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -230,6 +230,7 @@ button:not(:focus) {
   position: relative;
   text-transform: capitalize;
   font-weight: 600;
+  line-height: 52px;
   font-size: 42px;
   overflow: hidden;
 }
