--- a/views/home.hbs
+++ b/views/home.hbs
@@ -481,9 +481,7 @@
                   </div>
                 </div>
                 <div class="image-section">
-                  <img class="profile_image"
-                    src="https://media-exp1.licdn.com/dms/image/C5103AQEaQr0tmLtffA/profile-displayphoto-shrink_400_400/0/1536492922123?e=1615420800&v=beta&t=U5J9o1lRHqzSwbBynhfeoFJnFHfoSSObG-WgJL9Xnmo"
-                    alt="profile-pic">
+                  <img class="profile_image" src="img/judge_1.jfif" alt="profile-pic">
                 </div>
               </div>
             </div>
