minor: add second judge

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -486,6 +486,23 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
+              <div class="profile">
+                <div class="content">
+                  <h1 class="title">Anand Chowdhary</h1>
+                  <div class="content-body">
+                    <p>Co founder and CTO of Koj</p>
+                    <p>Featured in Forbes 30 under 30 Asia 2018</p>
+                    <p>Co founder and former CEO of Oswald Labs</p>
+                  </div>
+                </div>
+                <div class="image-section">
+                  <img class="profile_image" src="img/judge_2.jpg" alt="profile-pic">
+                </div>
+              </div>
+            </div>
+          </div>
           {{!-- <div class="row">
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
