minor: add sponsor

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -665,6 +665,9 @@
               <a href="https://www.theatom.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/theatom_logo.jpeg" alt="">
               </a>
+              <a href="https://www.linkedin.com/company/witech-india/?originalSubdomain=in" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/wi-tech.jpeg" alt="">
+              </a>
               <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/rosenfeld.jpg" alt="">
               </a>
