chore: judge added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -503,6 +503,23 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
+              <div class="profile">
+                <div class="content">
+                  <h1 class="title">Jyotsna Gupta</h1>
+                  <div class="content-body">
+                    <p>Senior Software Engineer at Gojek</p>
+                    <p>Founder at Women Who Go Bangalore</p>
+                    <p>Mozilla Tech Speaker</p>
+                  </div>
+                </div>
+                <div class="image-section">
+                  <img class="profile_image" src="img/judge_3.jfif" alt="profile-pic">
+                </div>
+              </div>
+            </div>
+          </div>
           {{!-- <div class="row">
             <div class="profile-item col-md-12 col-12 col-lg-12 col-sm-12 col-xl-12">
               <div class="profile">
