chore: sponsor added

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -651,6 +651,9 @@
               <a href="https://www.framer.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/framer.svg" alt="">
               </a>
+              <a href="https://cipherschools.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
+                <img src="img/cipherschools.png" alt="">
+              </a>
               <a href="https://onli.in/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/onli_logo.jpeg" alt="" style="width: 15rem;">
               </a>
