--- a/views/home.hbs
+++ b/views/home.hbs
@@ -445,19 +445,68 @@
               </div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-12 flip">
-              <div class="front content text-center" style="background: linear-gradient(to top left, #1AF589, #15C26C)">
+              <div class="front content" style="background: linear-gradient(to top left, #1AF589, #15C26C)">
                 <h2>3rd Prize</h2>
                 <p>
                   To be announced...
                 <p>
               </div>
-              <div class="back">
-                <h2 class="content text-center">Details</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati
-                  magni?
-                </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4 col-md-offset-4 col-sm-4 col-sm-offset-4 col-xs-12 flip">
+              <div class="front content" style="background: linear-gradient(to top left, #f3d550, #c2b115)">
+                <h2>All Participants</h2>
+                <ul>
+                  <li>
+                    Access to Wolfram|One for all your participants for thirty days
+                  </li>
+                  <li>
+                    Top 5 gets an award from wolfram which includes one year of Wolfram|One Personal Edition plus a
+                    one-year subscription to Wolfram|Alpha Pro
+                  </li>
+                  <li>
+                    65% discount coupons of Coding Blocks
+                  </li>
+                  <li>
+                    50% discount in web hosting on InterWeb
+                  </li>
+                  <li>
+                    1 selected course at 50% discount on Onli.in
+                  </li>
+                  <li>
+                    20% discount coupons on courses of Merge Intern
+                    , internship opportunity
+                  </li>
+                  <li>
+                    20% discount code of rosenfield
+                  </li>
+                  <li>
+                    Discount code from careernaksha, internship interview oppurtunities
+                  </li>
+                  <li>
+                    20% discount in Product Hunt ship's Pro & Super Pro Plans
+                  </li>
+                  <li>
+                    Professional Licenses worth $49/month on voiceflow
+                  </li>
+                  <li>
+                    Full access licenses to InterviewCake full coding
+                    interview prep course
+                  </li>
+                  <li>
+                    Admin access to the enterprise account on Framer
+                  </li>
+                  <li>
+                    Hacker Toolkit email course on hackathons international
+                  </li>
+                  <li>
+                    $100, 60-day free trial on digitalocean
+                  </li>
+                </ul>
               </div>
             </div>
+
           </div>
         </div>
       </div>
@@ -685,7 +734,8 @@
               <a href="https://www.theatom.app/" target="_blank" class="sponsor" rel="noopener noreferrer">
                 <img src="img/theatom_logo.jpeg" alt="">
               </a>
-              <a href="https://www.linkedin.com/company/witech-india/?originalSubdomain=in" target="_blank" class="sponsor" rel="noopener noreferrer">
+              <a href="https://www.linkedin.com/company/witech-india/?originalSubdomain=in" target="_blank"
+                class="sponsor" rel="noopener noreferrer">
                 <img src="img/wi-tech.jpeg" alt="">
               </a>
               <a href="https://rosenfeldmedia.com/" target="_blank" class="sponsor" rel="noopener noreferrer">
