--- a/public/sass/alumni.scss
+++ b/public/sass/alumni.scss
@@ -22,8 +22,13 @@
       border-radius: 5%;
     }
     .card-body {
-      h3 {
+      .card-body-name {
         text-align: center;
+        font-size: 30px;
+      }
+      .card-body-position {
+        text-align: center;
+        font-size: 20px;
       }
     }
   }
