--- a/views/alumni.hbs
+++ b/views/alumni.hbs
@@ -32,7 +32,7 @@
     </header>
     <div class="alumni-section">
         <div class="alumni-greet">
-            <h1>A big thanks to our Alumni</h1>
+            <h1>A Big thanks to our Alumni</h1>
         </div>
     </div>
     </header>
@@ -42,20 +42,25 @@
                 <img src="https://picsum.photos/400/400" alt="" />
             </div>
             <div class="card-body">
-                <h3>
+                <div class="card-body-name">
                     John Doe
-                </h3>
+                </div>
+                <div class="card-body-position">
+                    Software Engineer at Google
+                </div>
             </div>
         </div>
         <div class="item">
             <div class="card-img">
                 <img src="https://picsum.photos/400/400" alt="" />
             </div>
-
             <div class="card-body">
-                <h3>
-                    Jane Doe
-                </h3>
+                <div class="card-body-name">
+                    John Doe
+                </div>
+                <div class="card-body-position">
+                    Software Engineer at Google
+                </div>
             </div>
         </div>
     </div>
