--- a/views/coc.hbs
+++ b/views/coc.hbs
@@ -15,20 +15,21 @@
     background-color: #fff;
   }
 
-  .heading{
-      color:#bd0c0e;
-      font-size:50px;
-      text-align: center;
+  .heading {
+    color: #bd0c0e;
+    font-size: 50px;
+    text-align: center;
   }
 
   ul li {
     font-size: 15px;
     font-family: 'Poppins', sans-serif;
     margin-bottom: 10px;
-    }
-    ul{
-        list-style: disc
-    }
+  }
+
+  ul {
+    list-style: disc
+  }
 
   .wrapper {
     display: flex;
@@ -37,36 +38,37 @@
   .col {
     flex: 1 0;
   }
-  .logofix{
-      width:200px;
+
+  .logofix {
+    width: 200px;
   }
-  .img-container{
+
+  .img-container {
     text-align: center;
   }
 
   .content {
     flex: 3
   }
-  
-  @media all and (max-width:768px){
-    .heading{
-    color:#bd0c0e;
-    font-size:30px;
-  }
 
-  ul li {
-    font-size: 15px;
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 10px;
+  @media all and (max-width:768px) {
+    .heading {
+      color: #bd0c0e;
+      font-size: 30px;
+    }
+
+    ul li {
+      font-size: 15px;
+      font-family: 'Poppins', sans-serif;
+      margin-bottom: 10px;
     }
   }
-
 </style>
 
 <body>
-<nav>
+  <nav>
     <div class="img-container"><a href="/"><img class="logo-img logofix" src="./img/image.png" alt="logo"></a></div>
-</nav>
+  </nav>
   <h1 class="heading">Code of Conduct</h1>
   <div class="wrapper">
     <div class="col"></div>
@@ -97,6 +99,10 @@
           applicable), or reporting their behaviour to local law enforcement.</li>
         <li>We expect participants to follow these rules at hackathon and workshop venues and hackathon-related
           social events.</li>
+        <li>Be Open. We welcome attendees from all backgrounds. This event is about increasing the overall amount of
+          learning, partnership, and engagement in the developer community.
+          Please treat our sponsors, organizers, and judges with the utmost respect. Without them, nothing would be
+          possible. </li>
       </ul>
       <h4>Our code of conduct is based on the <a href="https://hackcodeofconduct.org/">Hack Code of Conduct.</a></h4>
     </div>
