--- a/public/sass/_prizes.scss
+++ b/public/sass/_prizes.scss
@@ -10,12 +10,13 @@
       color: white;
       background-size: cover;
       background-position: center;
-      height: 700px;
+      height: 300px;
       padding: 3em;
       background: #313131;
       border-radius: 25px;
       h2,
-      h1 {
+      h1,
+      h4 {
         color: #fff;
       }
       p {
