--- a/views/home.hbs
+++ b/views/home.hbs
@@ -616,79 +616,11 @@
                 </h2>
               </div>
             </div>
-            <div class="col-md-6 col-sm-4 col-xs-12 flip">
-              <div class="front content " style="background: linear-gradient(to top left,#f3d550, #c2b115)">
-                <h2>All participants</h2>
-                <ul>
-                  <li>
-                    Access to Wolfram|One for thirty days
-                  </li>
-                  <li>
-                    65% discount coupons of Coding Blocks
-                  </li>
-                  <li>
-                    50% discount in web hosting on InterWeb
-                  </li>
-                  <li>
-                    1 selected course at 50% discount on Onli.in
-                  </li>
-                  <li>
-                    20% discount coupons on courses of Merge Intern, internship opportunity
-                  </li>
-                  <li>
-                    20% discount code of rosenfield
-                  </li>
-                  <li>
-                    Discount code from careernaksha, internship interview oppurtunities
-                  </li>
-                  <li>
-                    20% discount in Product Hunt ship's Pro & Super Pro Plans
-                  </li>
-                  <li>
-                    Professional Licenses worth $49/month on voiceflow
-                  </li>
-                  <li>
-                    $100, 60-day free trial on digitalocean
-                  </li>
-                  <li>
-                    Full access licenses to InterviewCake full coding
-                    interview prep course
-                  </li>
-                  <li>
-                    Admin access to the enterprise account on Framer
-                  </li>
-                  <li>
-                    Hacker Toolkit email course on hackathons international
-                  </li>
-                  <li>
-                    Top 5 gets one year of Wolfram|One Personal Edition plus a one-year subscription to Wolfram|Alpha Pro
-                  </li>
-                </ul>
-              </div>
-              <div class="back">
-                <h2 class="content text-center">Details</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel eum totam cumque corrupti obcaecati
-                  magni?
-                </p>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-4 col-xs-12 flip">
+            <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content" style="background: linear-gradient(to top left, #F7736F, #F5372A)">
                 <h2>1st Prize</h2>
                 {{!-- <h1>&#x20B9; 10,000</h1> --}}
-                <ul>
-                  <li>$2,000 in credits from digitalocean</li>
-                  <li>Free 1-year subscription licenses of Axure RP Team Edition.</li>
-                  <li>Coupons from buythevalue and cipher schools</li>
-                  <li>Internship Oppurtunities from atom</li>
-                  <li>90% discount coupon for all the members of the team from Coding Block</li>
-                  <li>Free 1 year InterWebs.Host Personal subscription worth $85 USD</li>
-                  <li>Free access to 2 selected courses on Onli.in</li>
-                  <li>Chance of direct offer from careernaksha</li>
-                  <li>6 months free of a 1Password Family account and for new 1Password customers only</li>
-                  <li>Company Lifetime Package from clerky</li>
-                  <li>30 day free trial on Elastic Clould</li>
-                </ul>
+                <h4>Worth 1.5 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
@@ -697,16 +629,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-sm-4 col-xs-12 flip">
+            <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content small" style="background: linear-gradient(to top left, #48c6ef, #6f86d6);">
                 <h2>2nd Prize</h2>
-                <ul>
-                  <li>Coupons from buythevalue and cipher schools</li>
-                  <li>Internship oppurtunities from atom</li>
-                  <li>85% discount coupon for all the members of the team from Coding Block</li>
-                  <li>free access to 2 selected courses on Onli.in</li>
-                  <li>Chance of direct offer from careernaksha</li>
-                </ul>
+                <h4>Worth 1.25 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
@@ -715,16 +641,10 @@
                 </p>
               </div>
             </div>
-            <div class="col-md-6 col-sm-4 col-xs-12 flip">
+            <div class="col-md-4 col-sm-4 col-xs-12 flip">
               <div class="front content small" style="background: linear-gradient(to top left, #1AF589, #15C26C)">
                 <h2>3rd Prize</h2>
-                <ul>
-                  <li>Coupons from buythevalue and cipher schools</li>
-                  <li>Internship oppurtunities from atom</li>
-                  <li>80% discount coupon for all the members of the team from Coding Block</li>
-                  <li>free access to 2 selected courses on Onli.in</li>
-                  <li>Chance of direct offer from careernaksha</li>
-                </ul>
+                <h4>Worth 1 Lakhs+</h4>
               </div>
               <div class="back">
                 <h2 class="content text-center">Details</h2>
@@ -733,7 +653,6 @@
                 </p>
               </div>
             </div>
-
           </div>
         </div>
       </div>
